# nakedbytes

./: README.md  a.out  array_union.json  array_union_data.json  code_generator.py  model1.bin2  model1.h  model1_2.h  model_1.json  model_113.json  model_160.json  model_struct_offset_1.h  model_to_nakedbytes_json.py  nakebyte_mode_gen.py  nakedbyte_mode_gen.py  sunspec_model  sunspec_model.json  sunspec_model2  sunspec_model2 copy  sunspec_model2 copy.cpp  sunspec_model2.cpp  sunspec_model_definition.fbs  sunspec_model_gen_struct_only.py  sunspec_model_generated.cpp  sunspec_model_generated_struct_offset  sunspec_model_generated_struct_offset.cpp  sunspec_model_generated_struct_offset.h  sunspec_model_struct_offset.nbs.h  sunspec_model_struct_only.cpp  temp.afb  temp.json  temp.py  temp_generated.h  test_sunspec_model_struct_offset.py
code_implementation/: byte_generator.py  byte_generator_utils.py  cpp_code_generator.py  cpp_code_generator_deserializer.py  cpp_code_generator_utils.py  cpp_code_serializer.py  nakedbytes.py  sunspec_model_struct_offset.json  type_desc_holder.py  type_desc_type_holder.py  type_parsing.py  type_utils.py
models/: json_to_bin.sh  model_to_flatbuffer_json.py
models/json/: model_129.json  model_132.json  model_133.json  model_134.json  model_135.json  model_136.json  model_137.json  model_138.json  model_139.json  model_140.json  model_141.json  model_142.json  model_143.json  model_144.json  model_302.json  model_303.json  model_304.json  model_63001.json  model_63002.json  model_64020.json  model_64413.json  model_805.json  model_806.json  model_807.json  model_808.json  model_809.json
models/model_flatbuffer_json/: pyvenv.cfg
nbenv/: pyvenv.cfg
nbevn/: pyvenv.cfg
research_experiment/power_meter/: CMakeLists.txt  analyse.sh  analysis.ipynb  analysis.py  power_meter.h  power_meter_flatbuffers_generated.h  power_meter_nakedbytes.json  power_meter_nakedbytes.nbs copy.h  power_meter_nakedbytes.nbs.h  power_meter_nakedbytes_data.json  power_meter_nanopb.pb.c  power_meter_nanopb.pb.h  power_meter_protobuf.pb.h  power_meter_protobuf.proto  power_meter_protobuf_data.txt  temp
research_experiment/power_meter/deserialization/: CMakeLists.txt  analyse.sh  power_meter_flatbuffers.fbs  power_meter_flatbuffers_deserialization_without_access.cpp  power_meter_flatbuffers_serialization_with_all_access.cpp  power_meter_flatbuffers_serialization_with_one_access.cpp  power_meter_main.cpp  power_meter_main_deserialization.cpp  power_meter_nakedbytes.nbs.h  power_meter_nakedbytes_deserialization_with_all_access.cpp  power_meter_nakedbytes_serialization_with_one_access.cpp  power_meter_nakedbytes_serialization_without_access.cpp  power_meter_nanopb.proto  power_meter_nanopb_deserialization_with_one_access.cpp  power_meter_nanopb_serialization_with_all_access.cpp  power_meter_nanopb_serialization_without_access.cpp  power_meter_overhead.cpp  power_meter_protobuf.pb.cc  power_meter_protobuf_deserialization_without_access.cpp  power_meter_protobuf_serialization_with_all_access.cpp  power_meter_protobuf_serialization_with_one_access.cpp  temp
research_experiment/power_meter/flatbuffers/: massif.out.726348  power_meter.fbs  power_meter_flatbuffers_test  power_meter_flatbuffers_test.cpp  power_meter_flatbuffers_test.su  power_meter_generated.h  temp
research_experiment/power_meter/nakedbytes/: massif.out.724160  massif.out.725345  power_meter.json  power_meter.nbs copy.h  power_meter.nbs.h  power_meter_data_nakedbytes.json  power_meter_nakedbytes_test  power_meter_nakedbytes_test.cpp  power_meter_nakedbytes_test.su  temp  temp2
research_experiment/power_meter/protobuf/: power_meter.pb.cc  power_meter.pb.h  power_meter.proto  power_meter_data_protobuf.txt  power_meter_protobuf_test.cpp
research_experiment/power_meter/serialization/: power_meter_flatbuffers_serialization_all.cpp  power_meter_flatbuffers_serialization_primitives.cpp  power_meter_main_serialization.cpp  power_meter_nakedbytes_serialization_all.cpp  power_meter_nakedbytes_serialization_primitives.cpp  power_meter_nanopb_serialization_all.cpp  power_meter_nanopb_serialization_primitives.cpp  power_meter_overhead_serialization.cpp  power_meter_protobuf_serialization_all.cpp  power_meter_protobuf_serialization_primitives.cpp
research_paper/: naked_byte_research_paper.aux  naked_byte_research_paper.fdb_latexmk  naked_byte_research_paper.fls  naked_byte_research_paper.out  naked_byte_research_paper.tex
sunspec/: file_size.py  model_1.json  model_160.json  model_64411.json  model_struct_offset_1.h  sunspec.sh  sunspec_model2 copy.cpp  sunspec_model_class.json  sunspec_model_generated_struct_offset  sunspec_model_generated_struct_offset.cpp  sunspec_model_generated_struct_offset.h  sunspec_model_struct_offset.json
temp/: scratch_pad  temp.fbs  temp_generated.h
test/test_array_union/: array_union.json  array_union_generated_class.h  sunspec_model_generated_class.h  test_array_union.py
test/test_simple_class_example/: simple_class_example  simple_class_example.cpp  simple_class_example.json  simple_class_example_generated_class copy.h  simple_class_example_generated_class.h  test_simple_class_example.py
test/test_simple_example/: simple_example  simple_example.  simple_example.cpp  simple_example.json  simple_example_data.json  simple_example_generated_class.h  test_simple_example.py
test/test_simple_mix_example/: simple_mix_example  simple_mix_example.cpp  simple_mix_example.json  simple_mix_example_data.json  simple_mix_example_generated_class.h  test_simple_mix_example.py
test/test_simple_struct_example/: simple_struct_example  simple_struct_example copy.cpp  simple_struct_example.cpp  simple_struct_example.json  simple_struct_example_data.json  (+2 more)
test/test_simple_struct_example copy/: simple_struct_example  simple_struct_example.cpp  simple_struct_example_generated_class.h  test_simple_struct_example.py
tflite/: schema.fbs  schema_nakedbyte.json  tflite_generated.h
white_paper/: nakedbytes.aux  nakedbytes.fdb_latexmk  nakedbytes.fls  nakedbytes.out  nakedbytes.tex
(+243 files in other folders)
