cmake_minimum_required(VERSION 3.15)

project(nakedbytes_research)

set(CMAKE_CXX_STANDARD 11)
set(CMAKE_BUILD_TYPE Release CACHE STRING "" FORCE)
add_compile_options(-fstack-usage)

include_directories(${CMAKE_CURRENT_SOURCE_DIR})

add_executable(power_meter_overhead_deserialization deserialization/power_meter_main_deserialization.cpp deserialization/power_meter_overhead_deserialization.cpp)


add_executable(power_meter_nakedbytes_deserialization_without_access deserialization/power_meter_main_deserialization.cpp deserialization/power_meter_nakedbytes_deserialization_without_access.cpp)

add_executable(power_meter_nakedbytes_deserialization_with_one_access deserialization/power_meter_main_deserialization.cpp deserialization/power_meter_nakedbytes_deserialization_with_one_access.cpp)

add_executable(power_meter_nakedbytes_deserialization_with_all_access deserialization/power_meter_main_deserialization.cpp deserialization/power_meter_nakedbytes_deserialization_with_all_access.cpp)




add_executable(power_meter_flatbuffers_deserialization_without_access deserialization/power_meter_main_deserialization.cpp deserialization/power_meter_flatbuffers_deserialization_without_access.cpp)

add_executable(power_meter_flatbuffers_deserialization_with_one_access deserialization/power_meter_main_deserialization.cpp deserialization/power_meter_flatbuffers_deserialization_with_one_access.cpp)

add_executable(power_meter_flatbuffers_deserialization_with_all_access deserialization/power_meter_main_deserialization.cpp deserialization/power_meter_flatbuffers_deserialization_with_all_access.cpp)




find_package(Protobuf CONFIG REQUIRED)

add_executable(power_meter_protobuf_deserialization_without_access deserialization/power_meter_main_deserialization.cpp deserialization/power_meter_protobuf_deserialization_without_access.cpp power_meter_protobuf.pb.cc)
target_link_libraries(power_meter_protobuf_deserialization_without_access PRIVATE protobuf::libprotobuf)

add_executable(power_meter_protobuf_deserialization_with_one_access deserialization/power_meter_main_deserialization.cpp deserialization/power_meter_protobuf_deserialization_with_one_access.cpp power_meter_protobuf.pb.cc)
target_link_libraries(power_meter_protobuf_deserialization_with_one_access PRIVATE protobuf::libprotobuf)

add_executable(power_meter_protobuf_deserialization_with_all_access deserialization/power_meter_main_deserialization.cpp deserialization/power_meter_protobuf_deserialization_with_all_access.cpp power_meter_protobuf.pb.cc)
target_link_libraries(power_meter_protobuf_deserialization_with_all_access PRIVATE protobuf::libprotobuf)



add_library(nanopb STATIC
        /home/busoye_tm/Documents/matthew/projects/nakedbytes/research_experiment/third_party/nanopb/pb_decode.c
        /home/busoye_tm/Documents/matthew/projects/nakedbytes/research_experiment/third_party/nanopb/pb_encode.c
        /home/busoye_tm/Documents/matthew/projects/nakedbytes/research_experiment/third_party/nanopb/pb_common.c
)
target_include_directories(nanopb PUBLIC /home/busoye_tm/Documents/matthew/projects/nakedbytes/research_experiment/third_party/nanopb/)

target_compile_definitions(nanopb PUBLIC
        # PB_ENABLE_MALLOC=1
)

add_executable(power_meter_nanopb_deserialization_without_access deserialization/power_meter_main_deserialization.cpp deserialization/power_meter_nanopb_deserialization_without_access.cpp power_meter_nanopb.pb.c)
target_link_libraries(power_meter_nanopb_deserialization_without_access PRIVATE nanopb)

add_executable(power_meter_nanopb_deserialization_with_one_access deserialization/power_meter_main_deserialization.cpp deserialization/power_meter_nanopb_deserialization_with_one_access.cpp power_meter_nanopb.pb.c)
target_link_libraries(power_meter_nanopb_deserialization_with_one_access PRIVATE nanopb)

add_executable(power_meter_nanopb_deserialization_with_all_access deserialization/power_meter_main_deserialization.cpp deserialization/power_meter_nanopb_deserialization_with_all_access.cpp power_meter_nanopb.pb.c)
target_link_libraries(power_meter_nanopb_deserialization_with_all_access PRIVATE nanopb)


add_executable(power_meter_overhead_serialization serialization/power_meter_main_serialization.cpp serialization/power_meter_overhead_serialization.cpp)

add_executable(power_meter_nakedbytes_serialization_primitives serialization/power_meter_main_serialization.cpp serialization/power_meter_nakedbytes_serialization_primitives.cpp)

add_executable(power_meter_nakedbytes_serialization_all serialization/power_meter_main_serialization.cpp serialization/power_meter_nakedbytes_serialization_all.cpp)



add_executable(power_meter_flatbuffers_serialization_primitives serialization/power_meter_main_serialization.cpp serialization/power_meter_flatbuffers_serialization_primitives.cpp)

add_executable(power_meter_flatbuffers_serialization_all serialization/power_meter_main_serialization.cpp serialization/power_meter_flatbuffers_serialization_all.cpp)



add_executable(power_meter_protobuf_serialization_primitives serialization/power_meter_main_serialization.cpp serialization/power_meter_protobuf_serialization_primitives.cpp power_meter_protobuf.pb.cc)
target_link_libraries(power_meter_protobuf_serialization_primitives PRIVATE protobuf::libprotobuf)

add_executable(power_meter_protobuf_serialization_all serialization/power_meter_main_serialization.cpp serialization/power_meter_protobuf_serialization_all.cpp power_meter_protobuf.pb.cc)
target_link_libraries(power_meter_protobuf_serialization_all PRIVATE protobuf::libprotobuf)


add_executable(power_meter_nanopb_serialization_primitives serialization/power_meter_main_serialization.cpp 
serialization/power_meter_nanopb_serialization_primitives.cpp power_meter_nanopb.pb.c)
target_link_libraries(power_meter_nanopb_serialization_primitives PRIVATE nanopb)

add_executable(power_meter_nanopb_serialization_all serialization/power_meter_main_serialization.cpp 
serialization/power_meter_nanopb_serialization_all.cpp power_meter_nanopb.pb.c)
target_link_libraries(power_meter_nanopb_serialization_all PRIVATE nanopb)