cmake_minimum_required(VERSION 3.15)

project(nakedbytes_research)

set(CMAKE_CXX_STANDARD 11)
set(CMAKE_BUILD_TYPE Debug)
add_compile_options(-fstack-usage)

add_executable(power_meter_overhead power_meter_main.cpp power_meter_overhead.cpp)


add_executable(power_meter_nakedbytes_serialization_without_access power_meter_main.cpp power_meter_nakedbytes_serialization_without_access.cpp)

add_executable(power_meter_nakedbytes_serialization_with_one_access power_meter_main.cpp power_meter_nakedbytes_serialization_with_one_access.cpp)

add_executable(power_meter_nakedbytes_serialization_with_all_access power_meter_main.cpp power_meter_nakedbytes_serialization_with_all_access.cpp)




add_executable(power_meter_flatbuffers_serialization_without_access power_meter_main.cpp power_meter_flatbuffers_serialization_without_access.cpp)

add_executable(power_meter_flatbuffers_serialization_with_one_access power_meter_main.cpp power_meter_flatbuffers_serialization_with_one_access.cpp)

add_executable(power_meter_flatbuffers_serialization_with_all_access power_meter_main.cpp power_meter_flatbuffers_serialization_with_all_access.cpp)




find_package(Protobuf CONFIG REQUIRED)

add_executable(power_meter_protobuf_serialization_without_access power_meter_main.cpp power_meter_protobuf_serialization_without_access.cpp power_meter_protobuf.pb.cc)
target_link_libraries(power_meter_protobuf_serialization_without_access PRIVATE protobuf::libprotobuf)

add_executable(power_meter_protobuf_serialization_with_one_access power_meter_main.cpp power_meter_protobuf_serialization_with_one_access.cpp power_meter_protobuf.pb.cc)
target_link_libraries(power_meter_protobuf_serialization_with_one_access PRIVATE protobuf::libprotobuf)

add_executable(power_meter_protobuf_serialization_with_all_access power_meter_main.cpp power_meter_protobuf_serialization_with_all_access.cpp power_meter_protobuf.pb.cc)
target_link_libraries(power_meter_protobuf_serialization_with_all_access PRIVATE protobuf::libprotobuf)



add_library(nanopb STATIC
        /home/busoye_tm/Documents/matthew/projects/nakedbytes/research_experiment/third_party/nanopb/pb_decode.c
        /home/busoye_tm/Documents/matthew/projects/nakedbytes/research_experiment/third_party/nanopb/pb_encode.c
        /home/busoye_tm/Documents/matthew/projects/nakedbytes/research_experiment/third_party/nanopb/pb_common.c
)
target_include_directories(nanopb PUBLIC /home/busoye_tm/Documents/matthew/projects/nakedbytes/research_experiment/third_party/nanopb/)

target_compile_definitions(nanopb PUBLIC
        # PB_ENABLE_MALLOC=1
)

add_executable(power_meter_nanopb_serialization_without_access power_meter_main.cpp power_meter_nanopb_serialization_without_access.cpp power_meter_nanopb.pb.c)
target_link_libraries(power_meter_nanopb_serialization_without_access PRIVATE nanopb)

add_executable(power_meter_nanopb_serialization_with_one_access power_meter_main.cpp power_meter_nanopb_serialization_with_one_access.cpp power_meter_nanopb.pb.c)
target_link_libraries(power_meter_nanopb_serialization_with_one_access PRIVATE nanopb)

add_executable(power_meter_nanopb_serialization_with_all_access power_meter_main.cpp power_meter_nanopb_serialization_with_all_access.cpp power_meter_nanopb.pb.c)
target_link_libraries(power_meter_nanopb_serialization_with_all_access PRIVATE nanopb)
